--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ content="width=device-width,intial-scale=1"/>
                    <footer>
                       <ul class="icons">
                           <li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Fkhanhndk1606.github.io/Cydia"class="fa-plus">Thêm nguồn vào Cydia</a></li>
+                          <li><a href="https://www.facebook.com/Deekaygayyyyy"class="fa-plus">Theo dõi tôi trên Facebook</a></li>
                      </ul>
                   </footer>
              </selection>
