--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@ content="width=device-width,intial-scale=1"/>
                 <section id="main">
                    <header>
                       <span class="avatar"><imgsrc="images/avatar.jpg"alt=""/></span>
-                      <h1>NDK</h1>
-                      <p>Đây là nguồn của Nguyễn Đình Khanh</p>
+                      <h1>NDK's Repo</h1>
+                      <p>Hãy ủng hộ tôi để phát triển thêm nhé!!!!</p>
                    </header>
                  
                    <footer>
                       <ul class="icons">
                           <li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Fkhanhndk1606.github.io/Cydia"class="fa-plus">Thêm nguồn vào Cydia</a></li>
+                          <li><a href="zbra://sources/add/https://khanhndk1606.github.io/Cydia"class="fa-plus">Thêm nguồn vào Zebra</a></li>
+                          <li><a href="sileo://source/https://khanhndk1606.github.io/Cydia"class="fa-plus">Thêm nguồn vào Sileo</a></li>
+                          <li><a href="installer://add/https://khanhndk1606.github.io/Cydia"class="fa-plus">Thêm nguồn vào Installer</a></li>
                           <li><a href="https://www.facebook.com/Deekaygayyyyy"class="fa-plus">Theo dõi tôi trên Facebook</a></li>
                      </ul>
                   </footer>
@@ -35,7 +38,7 @@ content="width=device-width,intial-scale=1"/>
             <!--Footer-->
                <footer id="footer">
                   <ul class="coppyright">
-                  <li>NDK</li>
+                  <li>Nguồn của Nguyễn Đình Khanh</li>
                  </ul>
             </footer>
   
