--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ content="width=device-width,intial-scale=1"/>
                           <li><a href="sileo://source/https://khanhndk1606.github.io/Cydia"class="fa-plus">Thêm nguồn vào Sileo</a></li>
                           <li><a href="installer://add/https://khanhndk1606.github.io/Cydia"class="fa-plus">Thêm nguồn vào Installer</a></li>
                           <li><a href="https://www.facebook.com/Deekaygayyyyy"class="fa-plus">Theo dõi tôi trên Facebook</a></li>
+                          <li><a href="https://www.facebook.com/groups/AppleTeam.Group/?ref=share"class="fa-plus">Tham gia nhóm Thủ Thuật Cydia Và Jailbreak</a></li>
                      </ul>
                   </footer>
              </selection>
