--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Fnguyendinhkhanh06.github.io/Cydia">
+<ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Fndk-jailbreak.github.io">
 <img class="icon" src="info/System/Images/Cydia.png"/>
 Thêm vào Cydia</label></a></li></ul>
 
-<ul><li><a href="sileo://source/https://nguyendinhkhanh06.github.io/Cydia">
+<ul><li><a href="sileo://source/https://ndk-jailbreak.github.io">
 <img class="icon" src="info/System/Images/Sileo.png"/>
 Thêm vào Sileo</label></a></li></ul>
 
-<ul><li><a href="zbra://sources/add/https://nguyendinhkhanh06.github.io/Cydia">
+<ul><li><a href="zbra://sources/add/https://ndk-jailbreak.github.io">
 <img class="icon" src="info/System/Images/Zebra.png"/>
 Thêm vào Zebra</label></a></li></ul>
 
-<ul><li><a href="installer://add/https://nguyendinhkhanh06.github.io/Cydia">
+<ul><li><a href="installer://add/https://ndk-jailbreak.github.io">
 <img class="icon" src="info/System/Images/Installer.png"/>
 Thêm vào Installer</label></a></li></ul>
 
