--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <div class="container">
     <div class="well">
-        <p><span class="text-primary"><b></span></b>Cert State:THU HỒI❌</p>
+        <p><span class="text-primary"><b></span></b>Tình Trạng Chứng Chỉ:THU HỒI❌</p>
   <a href="itms-services://?action=download-manifest&url=https://ndk-jailbreak.github.io/info/plist/Unc0ver.plist"
            class="btn btn-sm btn-default">Unc0ver</a><br><br>
         <a href="itms-services://?action=download-manifest&url=https://ndk-jailbreak.github.io/info/plist/Taurine.plist"
