--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> NDK's Repository </h1>
+	<h1><img src="info/System/Images/Thumbnail.png"> NDK's Repository </h1>
 </div>
 
 <div class="container">
