--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 	<div class="well">
-		<p><span class="text-primary"><b>NGUỒN</span></b> Nhấn Vào Để Thêm Nguồn Vào Kho Lưu Trữ Của Bạn! </p>
+		<p><span class="text-primary"><b>NDK's Repo</span></b> Nhấn Vào Để Thêm Nguồn Vào Kho Lưu Trữ Của Bạn! </p>
         <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://ndk-jailbreak.github.io/">Thêm Vào Cydia</a>
         	<a class="btn btn-sm btn-default" href="sileo://source/https://ndk-jailbreak.github.io/">Thêm Vào Sileo</a>
 
