--- a/index.html
+++ b/index.html
@@ -68,5 +68,13 @@
 <div class="container">
     <h3 id="wells" class="page-header">Copyright © By KhanhNDK</h3>
 <div>
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
+<script scr="info/System/script.js"></script>
 </body>
 </html>
