--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
 </div>
 <div class="container">
     <div class="well">
-        <p><span class="text-primary"><b></span></b>Nhấn Để Cài Đặt Trực Tiếp</p>
-        <a class="btn btn-sm btn-default" href="itms-services://?action=download-manifest&url=https://ndk-jailbreak.github.io/info/plist/Facebook.plist">Facebook Wolf</a>
-        <a class="btn btn-sm btn-default" href="itms-services://?action=download-manifest&url=https://ndk-jailbreak.github.io/info/plist/Messenger.plist">Messenger Shark</a>
-         <a class="btn btn-sm btn-default" href="itms-services://?action=download-manifest&url=https://ndk-jailbreak.github.io/info/plist/Zalo.plist">Zalo// by JunKyo</a>
-         <a class="btn btn-sm btn-default" href="itms-services://?action=download-manifest&url=https://ndk-jailbreak.github.io/info/plist/Youtube.plist">Youtube// v16.31.4_JunKyo(>=IOS13)</a>
-          <a class="btn btn-sm btn-default" href="itms-services://?action=download-manifest&url=https://ndk-jailbreak.github.io/info/plist/Tiktok.plist">TikTok Corn</a>
+        <p><span class="text-primary"><b></span></b>Nhấn Để Tải Về File iPA</p>
+        <a class="btn btn-sm btn-default" href="https://drive.google.com/file/d/1hzqvnqEcNx5SDse-iJ8q_eB_raAqcZlr/view">Facebook Wolf</a>
+        <a class="btn btn-sm btn-default" href="https://drive.google.com/file/d/1xYaAvCgy62pF7MOY98aVYhHE-NJ8qPmL/view">Messenger Shark</a>
+         <a class="btn btn-sm btn-default" href="https://drive.google.com/file/d/1eKuL3VQXhRTMdPEZrOO5v8hOBfFo2qCA/view">Zalo 2</a>
+         <a class="btn btn-sm btn-default" href="https://drive.google.com/file/d/1pmZQo25cbm0QbC6z1jFarDcPZro0jojc/view">Youtube uYou 1.4(>=IOS13)</a>         
    </div>
 
 <div class="container">
