--- a/index.html
+++ b/index.html
@@ -75,5 +75,20 @@
   window.addEventListener('load', addDarkmodeWidget);
 </script>
 <script scr="info/System/script.js"></script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
+
+    <script>
+      new Darkmode({
+        bottom: '32px',
+        right: '32px',
+        time: '0.5s',
+        label: '🌓'
+      }).showWidget();
+    </script>
 </body>
 </html>
