--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>NDK's Repo</title>
+  <title>❤️Chào mừng bạn đến với nguồn của NDK❤️</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -74,7 +74,6 @@
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
-<script scr="info/System/script.js"></script>
 <script>
   function addDarkmodeWidget() {
     new Darkmode().showWidget();
