--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
-
+<script src="https://ongcenh.github.io/Debinfo/TQM/Snowblackup.js"></script>
     <script>
       new Darkmode({
         bottom: '32px',
