--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ https://templatemo.com/tm-543-breezed
                     <div class="right-text-content">
                             <ul class="social-icons">
                                 <li><p>Theo Dõi Tôi Tại:</p></li>
-                                <li><a rel="nofollow" href="https://www.facebook.com/longmen06"><i class="fa fa-facebook"></i></a></li>
+                                <li><a rel="nofollow" href="https://www.facebook.com/ndkjailbreak"><i class="fa fa-facebook"></i></a></li>
     </footer>
     <!-- jQuery -->
     <script src="NDK/js/jquery-2.1.0.min.js"></script>
