--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@ https://templatemo.com/tm-543-breezed
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="" class="logo">
-      NDK-Jailbreak
+      NDK
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#top" class="active">Trang Chủ</a></li>
-                            <li class="scroll-to-section"><a href="#about"> Giới thiệu Nhóm Thủ Thuật Cydia và Jailbreak</a></li>
+                            <li class="scroll-to-section"><a href="#about">Nhóm Thủ Thuật Cydia và Jailbreak</a></li>
                             <li class="scroll-to-section"><a href="#projects">Giới thiệu về Repo</a></li>
                             <li class="scroll-to-section"><a href="#tool">Liên hệ</a></li>
                         </ul>
