--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@ https://templatemo.com/tm-543-breezed
                   <h3>Kho Lưu Trữ Những Tinh Chỉnh Tốt Nhất</h3>
                            
         <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://ndk-jailbreak.github.io"
-           class="btn btn-lg btn-outline">Add Cydia</a>
+           class="btn btn-lg btn-outline">Thêm vào Cydia</a>
         <a href="sileo://source/https://ndk-jailbreak.github.io"
-           class="btn btn-lg btn-outline">Add Sileo</a>
+           class="btn btn-lg btn-outline">Thêm vào Sileo</a>
         <a href="zbra://sources/add/https://ndk-jailbreak.github.io"
-           class="btn btn-lg btn-outline">Add Zbra</a>
+           class="btn btn-lg btn-outline">Thêm vào Zebra</a>
         <a href="installer://add/https://ndk-jailbreak.github.io"
-           class="btn btn-lg btn-outline">Add Installer </a>
+           class="btn btn-lg btn-outline">Thêm vào Installer </a>
         <a href="https://ipalongmen06.github.io"
            class="btn btn-lg btn-outline">Trang iPA của Long Mến </a>
                  <h3>
