--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ https://templatemo.com/tm-543-breezed
                <h3>
 <h3>
                   <a href="https://facebook.com/ndkjailbreak" class="main-stroked-button"> Facebook của tôi</a>
-               <h3>                   <h3>Đây là Repo của NDK</h3>
+               <h3>                   <h3>Nguồn của Nguyễn Đình Khanh</h3>
                 </div>
               </div>
             </div>          
