--- a/index.html
+++ b/index.html
@@ -279,15 +279,15 @@ https://templatemo.com/tm-543-breezed
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8 text-center">
-                <a href="https://mega.nz/file/kBwChTwT#FmiYqKt8aFX3qIxTvyGDeqibtMnkWt4MZXm0mBZ48RQ" class="btn">Ipa Chiến Dịch Huyền Thoại</a>
+                <a href="https://mega.nz/file/kBwChTwT#FmiYqKt8aFX3qIxTvyGDeqibtMnkWt4MZXm0mBZ48RQ" class="btn">iPA Chiến Dịch Huyền Thoại</a>
                 &nbsp;
-                <a href="https://drive.google.com/file/d/1kfz5rPhnlUcB2FBpFaDImmkKY5572jfc/view?usp=drivesdk" class="btn">Ipa Youtube Cercube</a>
+                <a href="https://drive.google.com/file/d/1kfz5rPhnlUcB2FBpFaDImmkKY5572jfc/view?usp=drivesdk" class="btn">iPA Youtube Cercube</a>
                 &nbsp;
-                <a href="https://drive.google.com/file/d/1hzqvnqEcNx5SDse-iJ8q_eB_raAqcZlr/view?usp=drivesdk/" class="btn">Ipa Facebook Wolf</a>
+                <a href="https://drive.google.com/file/d/1hzqvnqEcNx5SDse-iJ8q_eB_raAqcZlr/view?usp=drivesdk/" class="btn">iPA Facebook Wolf</a>
                 &nbsp;
-                <a href="https://drive.google.com/file/d/1xYaAvCgy62pF7MOY98aVYhHE-NJ8qPmL/view?usp=drivesdk" class="btn">Ipa Messenger Shark</a>
+                <a href="https://drive.google.com/file/d/1xYaAvCgy62pF7MOY98aVYhHE-NJ8qPmL/view?usp=drivesdk" class="btn">iPA Messenger Shark</a>
                 &nbsp;
-                <a href="https://drive.google.com/file/d/1eKuL3VQXhRTMdPEZrOO5v8hOBfFo2qCA/view?usp=drivesdk" class="btn">Ipa Zalo 2</a>
+                <a href="https://drive.google.com/file/d/1eKuL3VQXhRTMdPEZrOO5v8hOBfFo2qCA/view?usp=drivesdk" class="btn">iPA Zalo 2</a>
         &nbsp;
                 <a href="https://www.mediafire.com/file/j8n2ghzfmnw56nu/Chinese.bytes/file" class="btn">File Tiếng Việt Game CDHT</a>                  </section>
     <!-- End Tool iDevice-->
