--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ https://templatemo.com/tm-543-breezed
                             <li class="scroll-to-section"><a href="#top" class="active">Trang Chủ</a></li>
                             <li class="scroll-to-section"><a href="#about">Nhóm Thủ Thuật Cydia và Jailbreak</a></li>
                             <li class="scroll-to-section"><a href="#projects">Giới thiệu về Repo</a></li>
-                            <li class="scroll-to-section"><a href="#tool">Liên hệ</a></li>
+                            <li class="scroll-to-section"><a href="#tool">Công cụ và tiện ích</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
