--- a/index.html
+++ b/index.html
@@ -272,6 +272,10 @@ https://templatemo.com/tm-543-breezed
                     </div>
                   </div>
                   </div>                    
+<div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <hr class="divider my-4" />
 <h2>Kho Lưu Trữ Ipa Hữu ích</h2>
                     <hr class="divider my-4" />
                   </div>
