--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ https://templatemo.com/tm-543-breezed
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
                     <hr class="divider my-4" />
-<h2>Kho Lưu Trữ Ipa Hữu ích</h2>
+<h2>Kho Lưu Trữ iPA Hữu Ích</h2>
                     <hr class="divider my-4" />
                   </div>
                 </div>
@@ -317,7 +317,7 @@ https://templatemo.com/tm-543-breezed
         <br><br>
         <div class="credit" style="text-align: center; color: white; margin: auto;">
             <div class="ndk stbox">
-<p>❤️Team TQM❤️:</a></p>
+<p>❤️Team TQM❤️</a></p>
                 <div class="pfp">
                     <img src="https://scontent.fhan5-4.fna.fbcdn.net/v/t1.6435-1/p200x200/153347323_1157103068058112_1747433747411743648_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=7206a8&_nc_ohc=9M8dY8ThoMkAX89TXyK&_nc_ht=scontent.fhan5-4.fna&oh=33b8a8e649d215161863aa1e3d81e660&oe=6151D6AA" width="50" height="50" style="border-radius: 100%;">
                 </div>
