--- a/index.html
+++ b/index.html
@@ -321,27 +321,20 @@ https://templatemo.com/tm-543-breezed
                 <div class="pfp">
                     <img src="https://scontent.fhan5-4.fna.fbcdn.net/v/t1.6435-1/p200x200/153347323_1157103068058112_1747433747411743648_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=7206a8&_nc_ohc=9M8dY8ThoMkAX89TXyK&_nc_ht=scontent.fhan5-4.fna&oh=33b8a8e649d215161863aa1e3d81e660&oe=6151D6AA" width="50" height="50" style="border-radius: 100%;">
                 </div>
-                <div class="name">
-                    NDK
-                </div>
+         <a href="https://ndk-jailbreak.github.io/" class="btn">NDK</a>
             </div>
-
             <div class="lm ndbox">
                 <div class="pfp">
                     <img src="https://scontent.fhan5-3.fna.fbcdn.net/v/t1.6435-1/p200x200/239747927_352018539950155_6974755648435669862_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=7206a8&_nc_ohc=2qBYLU-Qm14AX-KPlbS&_nc_oc=AQkFoxNvHXGOp5DBRdY0Bx8BaWfQtJQXywiSbktv0LBRSzJwWphQTgY3EY_CHL-Sgtfj8Jqg9pbxgY7iEP3cQ6Pn&_nc_ht=scontent.fhan5-3.fna&oh=6ebd3de64abd84658a931a52c6e961d1&oe=6153B9E0" width="50" height="50" style="border-radius: 100%;">
                 </div>
-                <div class="name">
-                    Long Mến
-                </div>
+                 <a href="https://longmen06.github.io/" class="btn">Long Mến</a>
             </div>
-
             <div class="oc rdbox">
                 <div class="pfp">
                     <img src="https://scontent.fhan5-6.fna.fbcdn.net/v/t39.30808-1/c0.0.480.480a/p480x480/216791803_382237990190165_2797802202626922374_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=7206a8&_nc_ohc=RAOJjgtzqY8AX8XSefC&_nc_ht=scontent.fhan5-6.fna&oh=a8a6a679a20a770b96e59032dfe42853&oe=61336ACA" width="50" height="50" style="border-radius: 100%;">
                 </div>
-                <div class="name">
-                    Ông Cễnh
-                </div>
+                <a href="https://ongcenh.github.io/" class="btn">Ông Cễnh</a>
+            </div>
             </div>
         </div>
     </footer>
