--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -80,9 +80,7 @@ https://templatemo.com/tm-543-breezed
                <h3>
                   <a href="https://www.facebook.com/groups/AppleTeam.Group/?ref=share" class="main-stroked-button">Tham Gia</a>
                <h3>
-<h3>
-                  <a href="https://facebook.com/ndkjailbreak" class="main-stroked-button"> Facebook của tôi</a>
-               <h3>                   <h3>Nguồn của Nguyễn Đình Khanh</h3>
+                   <h3>Nguồn của Nguyễn Đình Khanh</h3>
                 </div>
               </div>
             </div>          
@@ -116,109 +114,7 @@ https://templatemo.com/tm-543-breezed
                             <br>
              <p style="text-align:center;"><img src="icons/logo.png"style="width:100%;height:auto;"        
     <!-- ***** Projects Area Ends ***** -->
-    <!-- ***** Features Big Item Start ***** -->
-    <section class="section" id="features">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <div class="features-item">
-                        <div class="features-icon">
-                          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="75" height="80" viewBox="0 0 32 32">
-                          <title>checkmark</title>
-                          <path d="M27 4l-15 15-7-7-5 5 12 12 20-20z"></path>
-                          </svg>
-                        </div>
-                        <div class="features-content">
-                          <br>
-                            <h4>Tương Thích</h4>
-                            <p>Các Tweak này hầu hết đều tương thích với các dòng iOS 11 cho đến iOS 14 (Một số chỉ hỗ trợ tối đa đến iOS 10)</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                    <div class="features-item">
-                        <div class="features-icon">
-                          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="80" height="80">
-                  <path class="st1" d="M473.5,138.9l0-0.4c-0.2-4.9-0.4-10.1-0.5-15.9c-0.4-28.2-22.9-51.6-51.1-53.2C363.1,66.2,317.5,47,278.6,9
-                      l-0.3-0.3c-12.7-11.6-31.8-11.6-44.5,0L233.4,9C194.5,47,149,66.2,90.1,69.5C61.9,71,39.4,94.4,39,122.6c-0.1,5.8-0.2,11-0.5,15.9
-                      l0,0.9c-1.1,60-2.6,134.7,22.4,202.5c13.7,37.3,34.6,69.7,61.9,96.3c31.1,30.3,71.8,54.4,121,71.6c1.6,0.6,3.3,1,5,1.4
-                      c2.4,0.5,4.8,0.7,7.2,0.7c2.4,0,4.8-0.2,7.2-0.7c1.7-0.3,3.4-0.8,5-1.4c49.2-17.2,89.9-41.3,120.9-71.6
-                      c27.3-26.7,48.1-59.1,61.9-96.4C476,273.9,474.6,199.1,473.5,138.9z M422.8,331.5c-26.4,71.5-80.2,120.6-164.5,150
-                      c-0.3,0.1-0.6,0.2-1,0.3c-0.9,0.2-1.8,0.2-2.6,0c-0.3-0.1-0.6-0.2-0.9-0.3c-84.4-29.4-138.3-78.5-164.6-150
-                      c-23-62.5-21.7-131.1-20.6-191.6l0-0.3c0.2-5.2,0.4-10.6,0.5-16.6c0.2-12.5,10.2-22.9,22.7-23.6c33.3-1.9,62.6-8.3,89.5-19.7
-                      c26.9-11.4,50.7-27.4,72.9-49c1.1-1,2.6-1,3.7,0c22.2,21.6,46.1,37.6,72.9,49c26.9,11.4,56.2,17.8,89.5,19.7
-                      c12.6,0.7,22.5,11.1,22.7,23.6c0.1,6,0.2,11.5,0.5,16.6C444.6,200.3,445.9,268.9,422.8,331.5z"></path>
-                  <path class="st1" d="M256,128.4c-70.4,0-127.6,57.2-127.6,127.6c0,70.4,57.2,127.6,127.6,127.6c70.4,0,127.6-57.2,127.6-127.6
-                      C383.6,185.7,326.4,128.4,256,128.4z M313.9,237.6L244,307.5c-2.9,2.9-6.8,4.4-10.6,4.4s-7.7-1.5-10.6-4.4l-26.7-26.7
-                      c-5.9-5.9-5.9-15.4,0-21.2c5.9-5.9,15.4-5.9,21.2,0l16.1,16.1l59.3-59.3c5.9-5.9,15.4-5.9,21.2,0
-                      C319.8,222.3,319.8,231.8,313.9,237.6z"></path>
-              </svg>
-                        </div>
-                        <div class="features-content">
-                            <h4>An Toàn</h4>
-                            <p>Các Tweak này đều được kiểm tra một cách kĩ càng để đảm bảo an toàn cho người sử dụng.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter bottom move 30px over 0.6s after 0.4s">
-                    <div class="features-item">
-                        <div class="features-icon">
-                          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="75" height="75" viewBox="0 0 32 32">
-                          <title>rocket</title>
-                          <path d="M22 2l-10 10h-6l-6 8c0 0 6.357-1.77 10.065-0.94l-10.065 12.94 13.184-10.255c1.839 4.208-1.184 10.255-1.184 10.255l8-6v-6l10-10 2-10-10 2z"></path>
-                          </svg>
-                        </div>
-                        <div class="features-content">
-                            <h4>Nhanh Chóng</h4>
-                            <p>Tuy số lượng Tweak nhiều hơn 100. Nhưng kích thước của
-                              file lại rất nhẹ và có tốc độ nhanh hơn nhiều so với cài nhiều tweak có cùng chức năng.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                    <div class="features-item">
-                        <div class="features-icon">
-                          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24">
-                          <title>battery_full</title>
-                          <path d="M15.656 3.984q0.563 0 0.961 0.398t0.398 0.961v15.328q0 0.563-0.398 0.938t-0.961 0.375h-7.313q-0.563 0-0.961-0.375t-0.398-0.938v-15.328q0-0.563 0.398-0.961t0.961-0.398h1.641v-1.969h4.031v1.969h1.641z"></path>
-                          </svg>
-                        </div>
-                        <div class="features-content">
-                            <h4>Pin</h4>
-                            <p>Pin luôn là vấn đề cần thiết cho các dòng iPhone.
-                              Chúng tôi luôn chú trọng nó và liên tục cập nhật các Tweak liên quan tới điều này!</p>
-                        </div>
-                    </div>
-                </div>
-                  <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <div class="features-item">
-                        <div class="features-icon">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" viewBox="0 0 24 24">
-                          <path d="M18 10v-4c0-3.313-2.687-6-6-6s-6 2.687-6 6v4h-3v14h18v-14h-3zm-10 0v-4c0-2.206 1.794-4 4-4s4 1.794 4 4v4h-8z"></path>
-                          </svg>
-                        </div>
-                        <div class="features-content">
-                            <h4>Bảo Mật</h4>
-                            <p>Bảo mật luôn là hàng đầu với người sử dụng.
-                              Chúng tôi sẽ luôn cập nhật những tính năng đó để đáp ứng được nhu cầu của người dùng.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter bottom move 30px over 0.6s after 0.4s">
-                    <div class="features-item">
-                        <div class="features-icon">
-                          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="75" height="80" viewBox="0 0 32 32">
-                          <title>accessibility</title>
-                          <path d="M13 3c0-1.657 1.343-3 3-3s3 1.343 3 3c0 1.657-1.343 3-3 3s-3-1.343-3-3z"></path>
-                          <path d="M20 10l10.3-4.443-0.743-1.857-12.557 4.3h-2l-12.557-4.3-0.743 1.857 10.3 4.443v8l-4.102 13.268 1.87 0.709 5.804-12.977h0.857l5.804 12.977 1.87-0.709-4.102-13.268z"></path>
-                          </svg>
-                        </div>
-                        <div class="features-content">
-                            <h4>Hiệu Suất</h4>
-                            <p>Hiệu suất cũng là một trong những điều đáng chú ý.
-                             Các Tweak của chúng tôi luôn luôn cải thiện 1 phần hiệu suất máy và chúng tôi sẽ luôn cập nhật nó.</p>                     
-               <br>
-            </section>
+   
     <!-- ***** Contact Us Area Ends ***** -->
     <!-- Tool iDevice-->
     <section class="page-section" id="tool">
