--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -94,25 +94,51 @@ https://templatemo.com/tm-543-breezed
             <div class="row">
                     <div class="left-text-content">
                         <div class="section-heading">
-             <p style="text-align:center;"><img src="NDK/img/Thumbnail.png"style="width:100%;height:auto;">
+             		   <p style="text-align:center;"><img src="icons/checkra1n.png"style="width:100%;height:auto;">
                             <br>
                             <br>
-                            <h6>Giới thiệu về nhóm Thủ Thuật Cydia Và Jailbreak</h6>
+                            <h6>Hướng dẫn tạo USB Checkra1n</h6>
                             <br>
-                            Nhóm Thủ Thuật Cydia và Jailbreak tạo ra nhằm giúp mọi người có thể trao đổi với nhau, chia sẽ những Tweak hay, những setup đẹp, học hỏi thêm kinh nghiệm về Jailbreak.
+                            ∙Bước 1:
+   				Tải phần mềm Rufus và phiên bản Checkra1n phù hợp với iPhone của bạn (lưu ý: Checkra1n chỉ hỗ trợ từ iPhone 5s-X iOS 12.0-14.7). 
+			    <br>
+			     <a href="https://download.com.vn/rufus-73079" class="btn">Link Tải Rufus mới nhất</a>
+                &nbsp;
+			     <a href="https://github.com/asineth0/checkn1x/releases/tag/1.1.6" class="btn">Link Tải Checkra1n</a>
+                &nbsp;
+			    <br>
+		 	    <br>
+			    <br>
+			    ∙Bước 2:
+                                Mở phần mềm Rufus và cắm USB vào màn hình sẽ hiện ra như thế này.
+			    <br>
+                             <img src="icons/1.png"style="width:40%;height:20%;">              
+			    <br>
+			    <br>
+                                Chọn Select và chọn file Checkra1n cần Jailbreak
                             <br>
-                            <br>
-                             <h6>Giới thiệu về Repo của NDK</h6>
-                            <br>
-                            Repo của NDK là nơi lưu trữ các Tweak hay được việt hoá sẵn,ngoài ra còn có Theme và Wigdet đẹp.
+			    <br>
+                             <img src="icons/2.png"style="width:40%;height:20%;">
+			    <br>
+			    <br>
+                             <img src="icons/3.png"style="width:50%;height:100%;">
+			    <br>
+			    <br>
+				Nhấn Start mọi thứ sẽ thự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn)
+			    <br>
+			    <br>
+			     <img src="icons/4.png"style="width:50%;height:100%;">
+			    <br>
+			    <br>
+				Và thế là xong!
+			    <br>
                         </div>
                         <div class="container">
                             <div class="row">
                                     <div class="left-text-content">
                                         <div class="section-heading">
 
-                            <br>
-             <p style="text-align:center;"><img src="icons/logo.png"style="width:100%;height:auto;"        
+                            <br>     
     <!-- ***** Projects Area Ends ***** -->
    
     <!-- ***** Contact Us Area Ends ***** -->
@@ -160,28 +186,6 @@ https://templatemo.com/tm-543-breezed
                     </div>
                   </div>
                   </div>                    
-<div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8 text-center">
-                    <hr class="divider my-4" />
-<h2>Kho Lưu Trữ iPA Hữu Ích</h2>
-                    <hr class="divider my-4" />
-                  </div>
-                </div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8 text-center">
-                <a href="https://mega.nz/file/kBwChTwT#FmiYqKt8aFX3qIxTvyGDeqibtMnkWt4MZXm0mBZ48RQ" class="btn">iPA Chiến Dịch Huyền Thoại</a>
-                &nbsp;
-                <a href="https://drive.google.com/file/d/1kfz5rPhnlUcB2FBpFaDImmkKY5572jfc/view?usp=drivesdk" class="btn">iPA Youtube Cercube</a>
-                &nbsp;
-                <a href="https://drive.google.com/file/d/1hzqvnqEcNx5SDse-iJ8q_eB_raAqcZlr/view?usp=drivesdk/" class="btn">iPA Facebook Wolf</a>
-                &nbsp;
-                <a href="https://drive.google.com/file/d/1xYaAvCgy62pF7MOY98aVYhHE-NJ8qPmL/view?usp=drivesdk" class="btn">iPA Messenger Shark</a>
-                &nbsp;
-                <a href="https://drive.google.com/file/d/1eKuL3VQXhRTMdPEZrOO5v8hOBfFo2qCA/view?usp=drivesdk" class="btn">iPA Zalo 2</a>
-        &nbsp;
-                <a href="https://www.mediafire.com/file/j8n2ghzfmnw56nu/Chinese.bytes/file" class="btn">File Tiếng Việt Game CDHT</a>                  </section>
     <!-- End Tool iDevice-->
     <!-- ***** Footer Start ***** -->
     <footer>
@@ -207,21 +211,21 @@ https://templatemo.com/tm-543-breezed
             <a href="https://ndk-jailbreak.github.io/" class="btn">
                 <div class="ndk" style="width: 33,33%; float: left;">
                     <div class="pfp">
-                        <img src="https://scontent.fhan5-4.fna.fbcdn.net/v/t1.6435-1/p200x200/153347323_1157103068058112_1747433747411743648_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=7206a8&_nc_ohc=9M8dY8ThoMkAX89TXyK&_nc_ht=scontent.fhan5-4.fna&oh=33b8a8e649d215161863aa1e3d81e660&oe=6151D6AA" width="50" height="50" style="border-radius: 100%;">
+                        <img src="icons/NDK.png" width="50" height="50" style="border-radius: 100%;">
                     </div>
                 </div>
             </a>
             <a href="https://longmen06.github.io/" class="btn">
                 <div class="lm">
                     <div class="pfp">
-                        <img src="https://scontent.fhan5-3.fna.fbcdn.net/v/t1.6435-1/p200x200/239747927_352018539950155_6974755648435669862_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=7206a8&_nc_ohc=2qBYLU-Qm14AX-KPlbS&_nc_oc=AQkFoxNvHXGOp5DBRdY0Bx8BaWfQtJQXywiSbktv0LBRSzJwWphQTgY3EY_CHL-Sgtfj8Jqg9pbxgY7iEP3cQ6Pn&_nc_ht=scontent.fhan5-3.fna&oh=6ebd3de64abd84658a931a52c6e961d1&oe=6153B9E0" width="50" height="50" style="border-radius: 100%;">
+                        <img src="icons/lm06.png" width="50" height="50" style="border-radius: 100%;">
                     </div>
                 </div>
             </a>
             <a href="https://ongcenh.github.io/" class="btn">
                 <div class="oc">
                     <div class="pfp">
-                        <img src="https://scontent.fhan5-6.fna.fbcdn.net/v/t39.30808-1/c0.0.480.480a/p480x480/216791803_382237990190165_2797802202626922374_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=7206a8&_nc_ohc=RAOJjgtzqY8AX8XSefC&_nc_ht=scontent.fhan5-6.fna&oh=a8a6a679a20a770b96e59032dfe42853&oe=61336ACA" width="50" height="50" style="border-radius: 100%;">
+                        <img src="icons/tqm.png" width="50" height="50" style="border-radius: 100%;">
                     </div>
                 </div>
             </a>
