--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -73,7 +73,7 @@ https://templatemo.com/tm-543-breezed
  <h3> </h3>
                   <h3>Kho Lưu Trữ Các Ứng Dụng JAILBREAK</h3>
                            
-        <a href="https://ndk-jailbreak.github.io/jailbreak/NDKStore/"
+        <a href="https://ndk-jailbreak.github.io/jailbreak/NDKStore/NDKStore.mobileconfig"
            class="btn btn-lg btn-outline">NDK Store</a>
                  <h3>
                   <h3>Tham gia nhóm Thủ Thuật Cydia Và Jailbreak</h3>
