--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ https://templatemo.com/tm-543-breezed
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
     </head>
 
     <body>
