--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ https://templatemo.com/tm-543-breezed
         <a href="https://ipalongmen06.github.io"
            class="btn btn-lg btn-outline">Trang iPA của Long Mến </a>
                  <h3>
-                  <h3>Tham gia nhóm Thủ Thuật Cydia Và Jailbreak</h3>
+                  <h3>Tham gia nhóm Chia Sẻ Kinh Nghiệm iOS Và Jailbreak</h3>
                <h3>
-                  <a href="https://www.facebook.com/groups/AppleTeam.Group/?ref=share" class="main-stroked-button">Tham Gia</a>
+                  <a href="https://www.facebook.com/groups/chiasekinhnghiemiosjailbreak/" class="main-stroked-button">Tham Gia</a>
                <h3>
 <h3>
                   <a href="https://ndk-jailbreak.github.io/jailbreak" class="main-stroked-button"> NDK Store</a>
