--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -80,9 +80,9 @@ https://templatemo.com/tm-543-breezed
         <a href="https://ndk-jailbreak.github.io/jailbreak/NDKStore/ndkstore.mobileconfig"
            class="btn btn-lg btn-outline">NDK Store</a>
                  <h3>
-                  <h3>Tham gia nhóm Thủ Thuật Cydia Và Jailbreak</h3>
+                  <h3>Tham gia nhóm Chia Sẻ Kinh Nghiệm iOS Và Jailbreak</h3>
                <h3>
-                  <a href="https://www.facebook.com/groups/AppleTeam.Group/?ref=share" class="main-stroked-button">Tham Gia</a>
+                  <a href="https://www.facebook.com/groups/chiasekinhnghiemiosjailbreak/" class="main-stroked-button">Tham Gia</a>
                <h3>
                    <h3>Nguồn của Nguyễn Đình Khanh</h3>
                 </div>
