--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-543-breezed
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#top" class="active">Trang Chủ</a></li>
-                            <li class="scroll-to-section"><a href="#about">Nhóm Thủ Thuật Cydia và Jailbreak</a></li>
+                            <li class="scroll-to-section"><a href="#about">Nhóm Chia Sẻ Kinh Nghiệm iOS Và Jailbreak</a></li>
                             <li class="scroll-to-section"><a href="#projects">Giới thiệu về Repo</a></li>
                             <li class="scroll-to-section"><a href="#tool">Công cụ và tiện ích</a></li>
                         </ul>
@@ -113,9 +113,9 @@ https://templatemo.com/tm-543-breezed
              <p style="text-align:center;"><img src="NDK/img/Thumbnail.png"style="width:100%;height:auto;">
                             <br>
                             <br>
-                            <h6>Giới thiệu về nhóm Thủ Thuật Cydia Và Jailbreak</h6>
+                            <h6>Giới thiệu về nhóm Chia Sẻ Kinh Nghiệm iOS Và Jailbreak</h6>
                             <br>
-                            Nhóm Thủ Thuật Cydia và Jailbreak tạo ra nhằm giúp mọi người có thể trao đổi với nhau, chia sẽ những Tweak hay, những setup đẹp, học hỏi thêm kinh nghiệm về Jailbreak.
+                            Nhóm Chia Sẻ Kinh Nghiệm iOS Và Jailbreak tạo ra nhằm giúp mọi người có thể trao đổi với nhau, chia sẽ những Tweak hay, những setup đẹp, học hỏi thêm kinh nghiệm về Jailbreak.
                             <br>
                             <br>
                              <h6>Giới thiệu về Repo của NDK</h6>
