--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@ https://templatemo.com/tm-543-breezed
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
 
     <body>
