--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -119,6 +119,7 @@ https://templatemo.com/tm-543-breezed
                              <img src="icons/1.png"style="width:40%;height:20%;">              
 			    <br>
 			    <br>
+			    ∙Bước 3:
                                 Chọn Select và chọn file Checkra1n cần Jailbreak
                             <br>
 			    <br>
@@ -128,6 +129,7 @@ https://templatemo.com/tm-543-breezed
                              <img src="icons/3.png"style="width:50%;height:100%;">
 			    <br>
 			    <br>
+			    ∙Bước 4:
 				Nhấn Start mọi thứ sẽ thự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn)
 			    <br>
 			    <br>
