--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -120,7 +120,7 @@ https://templatemo.com/tm-543-breezed
 			    <br>
 			    <br>
 			    ∙Bước 3:
-                                Chọn Select và chọn file Checkra1n cần Jailbreak
+                                Chọn Select và chọn file Checkra1n cần Jailbreak.
                             <br>
 			    <br>
                              <img src="icons/2.png"style="width:40%;height:20%;">
@@ -130,7 +130,7 @@ https://templatemo.com/tm-543-breezed
 			    <br>
 			    <br>
 			    ∙Bước 4:
-				Nhấn Start mọi thứ sẽ thự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn)
+				Nhấn Start mọi thứ sẽ thự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn).
 			    <br>
 			    <br>
 			     <img src="icons/4.png"style="width:50%;height:100%;">
