--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ https://templatemo.com/tm-543-breezed
             <div class="row">
                     <div class="left-text-content">
                         <div class="section-heading">
-             <p style="text-align:center;"><img src="NDK/img/Thumbnail.png"style="width:100%;height:auto;">
+             <p style="text-align:center;"><img src="info/System/Images/Repo.png"style="width:100%;height:auto;">
                             <br>
                             <br>
                             <h6>Giới thiệu về nhóm Chia Sẻ Kinh Nghiệm iOS Và Jailbreak</h6>
