--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>❤️Chào mừng bạn đến với nguồn của NDK❤️</title>
+    <title>.::Trang Hỗ Trợ Jailbreak::.</title>
 
 <!--
 Breezed Template
