--- a/jailbreak/NDKStore/NDK.html
+++ b/jailbreak/NDKStore/NDK.html
@@ -40,7 +40,7 @@
             <div class="section group">
                 <div class="col span_1_of_4">
                     <div class="apps">
-                                <a href="itms-services://?action=download-manifest&url=https://longmen06.github.io/plist/Unc0ver.plist">Tải</a>
+                                <a href="itms-services://?action=download-manifest&url=https://ongcenh.github.io/plist/install.plist">Tải</a>
                         <img src="img/unc0ver.png">
                         <h1>Unc0ver</h1>
 </div>
@@ -60,7 +60,7 @@
             <div class="section group">
                 <div class="col span_1_of_4">
                     <div class="apps">
-                                <a href="itms-services://?action=download-manifest&url=https://longmen06.github.io/plist/Taurine_k.plist">Tải</a>
+                                <a href="itms-services://?action=download-manifest&url=https://ongcenh.github.io/plist/Taurine_k.plist">Tải</a>
                         <img src="img/taurine.png">
                         <h1>Taurine</h1>
 </div>
@@ -70,7 +70,7 @@
             <div class="section group">
                 <div class="col span_1_of_4">
                     <div class="apps">
-                                <a href="itms-services://?action=download-manifest&url=https://longmen06.github.io/plist/OdysseyJB_k.plist">Tải</a>
+                                <a href="itms-services://?action=download-manifest&url=https://ongcenh.github.io/plist/OdysseyJB_k.plist">Tải</a>
                         <img src="img/OdysseyJB.png">
                         <h1>Odyssey</h1>
 </div>
@@ -80,7 +80,7 @@
             <div class="section group">
                 <div class="col span_1_of_4">
                     <div class="apps">
-                                <a href="itms-services://?action=download-manifest&url=https://www.iphonecake.com/app/appcake.plist">Tải</a>
+                                <a href="itms-services://?action=download-manifest&url=https://ongcenh.github.io/plist/appcake.plist">Tải</a>
                         <img src="img/appcake.png">
                         <h1>AppCake</h1>
 </div>
@@ -90,7 +90,7 @@
             <div class="section group">
                 <div class="col span_1_of_4">
                     <div class="apps">
-                                <a href="itms-services://?action=download-manifest&amp;url=https://TutuBox.io/plists/Lodging/Chimera.plist">Tải</a>
+                                <a href="itms-services://?action=download-manifest&url=https://ongcenh.github.io/plist/chimera.plist">Tải</a>
                         <img src="img/chimera.png">
                         <h1>Chimera</h1>
 </div>
@@ -100,7 +100,7 @@
             <div class="section group">
                 <div class="col span_1_of_4">
                     <div class="apps">
-                                <a href="itms-services://?action=download-manifest&url=https://file.ipa-apps.me/plist/H3lix_lol.plist">Tải</a>
+                                <a href="itms-services://?action=download-manifest&url=https://ongcenh.github.io/plist/hi3lix.plist">Tải</a>
                         <img src="img/h3lix.png">
                         <h1>H3Lix</h1>
 </div>
@@ -114,6 +114,6 @@
                         <img src="img/TestFlightIcon.png">
                         <h1>TestFlight</h1>
 </div>
-<p style="text-align:center;">Copyright © Team TQM❤️™ 2021</a>
+<p style="text-align:center;"><a>Copyright © Team TQM❤️™ 2021</a>
   </body>
 </html>
