--- a/jailbreak/NDKStore/NDK.html
+++ b/jailbreak/NDKStore/NDK.html
@@ -7,7 +7,7 @@
      <script src="https://ongcenh.github.io/Debinfo/TQM/Snow.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
 
-    <link rel="shortcut icon" href="https://ndk-jailbreak.github.io/CydiaIcon.png">
+    <link rel="shortcut icon" href="favicon.ico">
 
 <meta name="apple-mobile-web-app-capable" content="yes">
 
