--- a/jailbreak/NDKStore/NDK.html
+++ b/jailbreak/NDKStore/NDK.html
@@ -5,8 +5,8 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="myframework7-icons.css">
      <script src="https://ongcenh.github.io/Debinfo/TQM/Snow.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
-
+     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+     <link rel="apple-touch-icon" sizes="192x192" href="icon.png"> 
     <link rel="shortcut icon" href="favicon.ico">
 
 <meta name="apple-mobile-web-app-capable" content="yes">
