--- a/jailbreak/NDKStore/NDK.html
+++ b/jailbreak/NDKStore/NDK.html
@@ -6,7 +6,10 @@
         <link rel="stylesheet" href="myframework7-icons.css">
      <script src="https://ongcenh.github.io/Debinfo/TQM/Snow.js"></script>
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
-     <link rel="apple-touch-icon" sizes="192x192" href="apple-touch-icon.png"> 
+     <link rel="apple-touch-icon" href="touch-icon-iphone.png">
+     <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png">
+     <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
+     <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
     <link rel="shortcut icon" href="favicon.ico">
 
 <meta name="apple-mobile-web-app-capable" content="yes">
