--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -138,6 +138,13 @@ https://templatemo.com/tm-543-breezed
 			    <br>
 				Và thế là xong!
 			    <br>
+             <br>
+            •VIDEO HƯỚNG DẪN:
+             <br>
+             <br>
+			     <a href="https://youtu.be/Xs6v-9_ST7M" class="btn">Hướng Dẫn</a>
+                &nbsp;
+             <br>
                         </div>
                         <div class="container">
                             <div class="row">
