--- a/index.html
+++ b/index.html
@@ -310,8 +310,10 @@ https://templatemo.com/tm-543-breezed
                 <a href="https://drive.google.com/file/d/1xYaAvCgy62pF7MOY98aVYhHE-NJ8qPmL/view?usp=drivesdk" class="btn">iPA Messenger Shark</a>
                 &nbsp;
                 <a href="https://drive.google.com/file/d/1eKuL3VQXhRTMdPEZrOO5v8hOBfFo2qCA/view?usp=drivesdk" class="btn">iPA Zalo 2</a>
-        &nbsp;
-                <a href="https://www.mediafire.com/file/j8n2ghzfmnw56nu/Chinese.bytes/file" class="btn">File Tiếng Việt Game CDHT</a>                  </section>
+                &nbsp;
+                <a href="https://www.mediafire.com/file/j8n2ghzfmnw56nu/Chinese.bytes/file" class="btn">File Tiếng Việt Game CDHT</a> 
+                &nbsp;
+            </section>
     <!-- End Tool iDevice-->
     <!-- ***** Footer Start ***** -->
     <footer>
