--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ body {
   font-size: 16px;
 }
 
-.dark-mode {
+.light-mode {
   background-color: white;
-  color: ;
+  color: black;
 }
 </style>
     </head>
@@ -351,7 +351,7 @@ body {
 <script>
 function myFunction() {
    var element = document.body;
-   element.classList.toggle("dark-mode");
+   element.classList.toggle("light-mode");
 }
 </script>
 </div>
