--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ body {
                 &nbsp;
                 <a href="https://www.mediafire.com/file/j8n2ghzfmnw56nu/Chinese.bytes/file" class="btn">File Tiếng Việt Game CDHT</a> 
                 &nbsp;
-                              /div>
+                              </div>
                           </div>
                         </div>
                       </div>
