--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ https://templatemo.com/tm-543-breezed
 
     <link rel="stylesheet" href="NDK/css/lightbox.css">
 
-    <script src="https://ongcenh.github.io/Debinfo/TQM/Snowblackup.js"></script>
+    <script src="NDK/js/Snowblackup."></script>
 
     <link rel="stylesheet" href="info/TQM/Mos.css" rel="stylesheet" type="text/css"/>
 
