--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ https://templatemo.com/tm-543-breezed
                   <a href="https://www.facebook.com/groups/chiasekinhnghiemiosjailbreak/" class="main-stroked-button">Tham Gia</a>
                <h3>
 <h3>
-                  <a href="https://ndk-jailbreak.github.io/jailbreak" class="main-stroked-button"> NDK Store</a>
+                  <a href="https://ndk-jailbreak.github.io/jailbreak/" class="main-stroked-button"> NDK Store</a>
                <h3>                   <h3>Nguồn của Nguyễn Đình Khanh</h3>
                 </div>
               </div>
@@ -124,6 +124,7 @@ https://templatemo.com/tm-543-breezed
                             <br>
                             Nhóm Chia Sẻ Kinh Nghiệm iOS Và Jailbreak tạo ra nhằm giúp mọi người có thể trao đổi với nhau, chia sẽ những Tweak hay, những setup đẹp, học hỏi thêm kinh nghiệm về Jailbreak.
                             <br>
+                          <section class="section" id="projects">
                             <br>
                              <h6>Giới thiệu về Repo của NDK</h6>
                             <br>
@@ -135,7 +136,7 @@ https://templatemo.com/tm-543-breezed
                                         <div class="section-heading">
 
                             <br>
-             <p style="text-align:center;"><img src="icons/logo.png"style="width:100%;height:auto;"        
+             <p style="text-align:center;"><img src="info/System/Images/Repo.png"style="width:100%;height:auto;"        
     <!-- ***** Projects Area Ends ***** -->
     <!-- ***** Features Big Item Start ***** -->
     <section class="section" id="features">
