--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@ https://templatemo.com/tm-543-breezed
                             Nhóm Chia Sẻ Kinh Nghiệm iOS Và Jailbreak tạo ra nhằm giúp mọi người có thể trao đổi với nhau, chia sẽ những Tweak hay, những setup đẹp, học hỏi thêm kinh nghiệm về Jailbreak.
                             <br>
                           <section class="section" id="projects">
+                            <div class="container">
+            <div class="row">
+                    <div class="left-text-content">
+                        <div class="section-heading">
                             <br>
                              <h6>Giới thiệu về Repo của NDK</h6>
                             <br>
